// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleChoiceQuestion.choices array fetches a question's choices and paginate the results 1`] = `
Array [
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2UzOA==",
      "title": "Je suis le titre pour tester la recherche sur le mot: bonsoir #38",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2UzOQ==",
      "title": "Je suis le titre pour tester la recherche sur le mot: bonjoir #39",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0MA==",
      "title": "Je suis le titre pour tester la recherche sur le mot: rododindron #40",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0MQ==",
      "title": "Je suis le titre pour tester la recherche sur le mot: reDodindron #41",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0Mg==",
      "title": "Je suis le titre pour tester la recherche sur le mot: aulomidé #42",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0Mw==",
      "title": "Je suis le titre pour tester la recherche sur le mot: babinks #43",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0NA==",
      "title": "Je suis le titre pour tester la recherche sur le mot: skuu #44",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0NQ==",
      "title": "Je suis le titre pour tester la recherche sur le mot: skurt #45",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0Ng==",
      "title": "Je suis le titre pour tester la recherche sur le mot: brelique #46",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0Nw==",
      "title": "Je suis le titre pour tester la recherche sur le mot: motorisé #47",
    },
  },
]
`;

exports[`MultipleChoiceQuestion.choices array fetches a question's choices and paginate the results 2`] = `
Array [
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0OA==",
      "title": "Je suis le titre pour tester la recherche sur le mot: banane plantin #48",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0OQ==",
      "title": "Je suis le titre pour tester la recherche sur le mot: chicken #49",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U1MA==",
      "title": "Je suis le titre pour tester la recherche sur le mot: on est les nouveaux Beatles #50",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U1MQ==",
      "title": "Je suis le titre pour tester la recherche sur le mot: blyat #51",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U1Mg==",
      "title": "Je suis le titre pour tester la recherche sur le mot: cyka #52",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U1Mw==",
      "title": "Je suis le titre pour tester la recherche sur le mot: le mot #53",
    },
  },
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U1NA==",
      "title": "Je suis le titre pour tester la recherche sur le mot: le mort #54",
    },
  },
]
`;

exports[`MultipleChoiceQuestion.choices array fetches a question's choices and the number of answers to each of them 1`] = `
Object {
  "node": Object {
    "choices": Object {
      "edges": Array [
        Object {
          "node": Object {
            "responses": Object {
              "totalCount": 1,
            },
            "title": "Athlétisme",
          },
        },
        Object {
          "node": Object {
            "responses": Object {
              "totalCount": 1,
            },
            "title": "Natation",
          },
        },
        Object {
          "node": Object {
            "responses": Object {
              "totalCount": 2,
            },
            "title": "Sports collectifs",
          },
        },
        Object {
          "node": Object {
            "responses": Object {
              "totalCount": 0,
            },
            "title": "Sports individuels",
          },
        },
      ],
    },
  },
}
`;

exports[`MultipleChoiceQuestion.choices array fetches a question's choices that match the given term and paginate the results 1`] = `
Array [
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0NA==",
      "title": "Je suis le titre pour tester la recherche sur le mot: skuu #44",
    },
  },
]
`;

exports[`MultipleChoiceQuestion.choices array fetches a question's choices that match the given term and paginate the results 2`] = `
Array [
  Object {
    "node": Object {
      "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0NQ==",
      "title": "Je suis le titre pour tester la recherche sur le mot: skurt #45",
    },
  },
]
`;
